--- a/package.json
+++ b/package.json
@@ -21,5 +21,9 @@
     "next": "latest",
     "react": "latest",
     "react-dom": "latest"
+  },
+  "devDependencies": {
+    "eslint": "8.50.0",
+    "eslint-config-next": "13.5.4"
   }
 }
